[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/LevelFinishUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/aileron/Aileron-Black.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Sound/Victory.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="LevelFinishUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.5
margin_bottom = -1.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_top = 30
custom_constants/margin_left = 50
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 710.0
margin_top = 440.0
margin_right = 1210.0
margin_bottom = 640.0
rect_min_size = Vector2( 500, 200 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 30

[node name="NextLevelButton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 500.0
margin_bottom = 85.0
size_flags_horizontal = 7
size_flags_vertical = 15
custom_fonts/font = SubResource( 2 )
text = "Next Level"

[node name="LevelSelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Level Select"

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
